--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="./CSS/styles.css">
     <title>Document</title>
 </head>
-
 <body>
     <div class="header">
         <a href="./index.html" class="logo"><img src="./img/logo.png" alt=""></a>
@@ -31,12 +30,33 @@
     </div>
     <div class="mainblock1">
         <p class="task">
-            Главная задача учреждения <br> разработка и внедрение информационных технологий и систем
+            Главная задача учреждения <br> 
+            разработка и внедрение информационных технологий и систем
         </p>
-        <div class="container">
-
-        </div>
     </div>
+        
+        <div class="container">
+            <div class="task-cont">
+                <h3>Общего назначения</h3>
+                <ul>
+                    <li>формирование и ведение национальных информационных ресурсов</li>
+                    <li>создание информационно-аналитических систем в сфере государственного, муниципального и корпоративного управления</li>
+                    <li>проектирование и создание корпоративных телекоммуникационных сетей, информационные технологии в образовании</li>
+                    <li>создание и ведение баз данных, мониторинговые системы</li>
+                    <li>технологии сертификации программных средств и автоматизированных систем</li>
+                </ul>
+            </div>
+            <div class="task-cont">
+                <h3>Обеспечивающего назначения</h3>
+                <ul>
+                    <li>инновационные инструментарии для разработки типовых проектных решений</li>
+                    <li>эффективные интеграционные решения при создании сложных систем управления</li>
+                    <li>технологии моделирования и автоматического программирования сложных систем управления</li>
+                    <li>технологии семантического анализа</li>
+                </ul>
+            </div>
+        </div>
+        
     <footer class="footer">
         <div class="footer-cont">
             <div class="logo-footer">
@@ -63,5 +83,4 @@
         </div>
     </footer>
 </body>
-
 </html>
