--- a/projects.html
+++ b/projects.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./CSS/styles-con.css">
+    <link rel="stylesheet" href="./CSS/styles-projects.css">
     <title>Document</title>
 </head>
 <body>
@@ -19,33 +19,16 @@
         </ul>
     </div>
     <div class="mainblock1">
-        <h1>Конктакты</h1>
-            <div class="adress">
-                <p class="paragraph">Адрес</p>
-                <p>123557, Москва, Пресненский Вал, 19, стр. 1</p>
-            </div>
-            <div class="contact-container">
-                <div class="cont-container">
-                    <p class="paragraph">Телефон справочной</p>
-                    <p><a href="tel:+74997028121">+7 (499) 702-81-21</a></p>
-                </div>
-                <div class="cont-container">
-                    <p class="paragraph">Факс</p>
-                    <p><a href="tel:+74997028245">+7 (499) 702-82-45</a></p>
-                </div>
-            </div>
-            <div class="cont-container">
-                <p class="paragraph">E-mail справочной</p>
-                <p><a href="mailto:fganu.citis@mail.ru">fganu.citis@mail.ru</a></p>
-            </div>
-        <hr>
-        <h3 class="heading3">Есть вопросы? Тогда свяжитесь с нами</h3>
-        <form action="./form-email.php" class="form1" method="post">
-            <input type="text" placeholder="Имя" class="input1" name="name" id="name" required>
-            <input type="email" placeholder="Электронная почта" class="input1" name="mail" id="mail" required>
-            <textarea name="message" id="message" class="text" placeholder="Текст сообщения" required></textarea>
-            <button type="submit">Отправить</button>
-        </form>
+        <h1>Наши проекты</h1>
+        <div>
+            <a href=""><img src="" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="" alt=""></a>
+        </div>
+        <div>
+            <a href=""><img src="" alt=""></a>
+        </div>
     </div>
     <footer class="footer">
         <div class="footer-cont">
@@ -72,7 +55,5 @@
             </p>
         </div>
     </footer>
-
-
 </body>
 </html>
