--- a/vacancy.html
+++ b/vacancy.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./styles-vac.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles-vac.css">
     <title>Document</title>
 </head>
 <body>
     <div class="header">
-        <a href="./index.html" class="logo"><img src="./logo.png" alt="" ></a>
+        <a href="./index.html" class="logo"><img src="./img/logo.png" alt="" ></a>
         <ul class="menu">
             <li><a href="./index.html">Главная</a></li>
             <li><a href="./about.html">О предприятии</a></li>
@@ -19,12 +19,36 @@
         </ul>
     </div>
     <div class="mainblock-vac">
-        
+        <h1>Вакансии</h1>
+        <div class="vac-container">
+            <div class="all-vac">
+                <h3>Все вакансии</h3>
+                <a href="./vac-1.html">FRONTEND разработчик</a>
+                <a href="">PYTHON разработчик</a>
+                <a href="">PHP разработчик</a>
+                <a href="">GO разработчик</a>
+                <a href="">Разработчик БД</a>
+                <a href="">DEVOPS инженер</a>
+                <a href="">Бизнес-аналитик</a>
+                <a href="">Специалист по информационной безопасности</a>
+            </div>
+            <div class="vac">
+                <div class="vac-button"><a href="./vac-1.html">FRONTEND разработчик</a></div>
+                <div class="vac-button"><a href="">PYTHON разработчик</a></div>
+                <div class="vac-button"><a href="">PHP разработчик</a></div>
+                <div class="vac-button"><a href="">GO разработчик</a></div>
+                <div class="vac-button"><a href="">Разработчик БД</a></div>
+                <div class="vac-button"><a href="">DEVOPS инженер</a></div>
+                <div class="vac-button"><a href="">Бизнес-аналитик</a></div>
+                <div class="vac-button"><a href="">Специалист по информационной безопасности</a></div>
+            </div>
+        </div>   
     </div>
+    <a href="./vacform.html">Откликнуться</a>
     <footer class="footer">
         <div class="footer-cont">
         <div class="logo-footer">
-            <a href="./index.html"><img src="./logo.png" alt="" ></a>
+            <a href="./index.html"><img src="./img/logo.png" alt="" ></a>
         </div>
         <ul class="footer-menu">
             <li><a href="./index.html">Главная</a></li>
