--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles.css">
-    <link rel="stylesheet" href="./styles_ab.css">
+    <link rel="stylesheet" href="./CSS/styles.css">
+    <link rel="stylesheet" href="./CSS/styles_ab.css">
     <title>Document</title>
 </head>
 <body>
     <div class="header">
-        <a href="./index.html" class="logo"><img src="./logo.png" alt="" ></a>
+        <a href="./index.html" class="logo"><img src="./img/logo.png" alt="" ></a>
         <ul class="menu">
             <li><a href="./index.html">Главная</a></li>
             <li><a href="./about.html">О предприятии</a></li>
@@ -50,7 +50,7 @@
     <footer class="footer">
         <div class="footer-cont">
         <div class="logo-footer">
-            <a href="./index.html"><img src="./logo.png" alt="" ></a>
+            <a href="./index.html"><img src="./img/logo.png" alt="" ></a>
         </div>
         <ul class="footer-menu">
             <li><a href="./index.html">Главная</a></li>
