--- a/vac-1.html
+++ b/vac-1.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./CSS/styles.css">
-    <link rel="stylesheet" href="./css/styles-vac-one.css">
+    <link  href="./CSS/styles.css">
+    <link  href="./css/styles-vac-one.css">
     
     <title>FRONTEND разработчик</title>
 </head>
